fixed issue with footer overlapping items

--- a/WheresMyKappa/src/pages/CollectorList/CollectorList.module.css
+++ b/WheresMyKappa/src/pages/CollectorList/CollectorList.module.css
@@ -37,7 +37,6 @@
   gap: 20px;
   padding: 2rem;
   width: 100%;
-  height: calc(100vh - 150px); /* Subtract header and padding */
 }
 
 /* Individual Item Card */
